frontend/src/components/team-page/comment-section/topic/Topic.scss
.topic {
	display: flex;
	flex-direction: column;

	&-name {
		font-weight: 500;
		font-size: 18px;
		line-height: 20px;
	}

	&-no-comments {
		padding-top: 8px;
		padding-left: 12px;
		color: #757575;
	}

	&-comments {
		padding-top: 8px;
		padding-left: 12px;

		.comment {
			display: flex;
			flex-direction: column;
			row-gap: 4px;

			&-info {
				display: flex;
				flex-direction: row;
				column-gap: 0.5em;
				align-items: flex-end;

				font-size: 14px;
				line-height: 18px;
				font-weight: 500;

				&__match-number {
					font-weight: 600;
				}

				&__creator {
					color: #757575;
					font-size: 14px;
					line-height: 18px;
					font-weight: 600;
				}
			}

		}
	}
}

